# synalpheus

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  rust.yml
api/: Cargo.toml
api/src/: lib.rs  routes.rs
api/templates/: base.html  index.html
assets/css/: styles.css
entity/: Cargo.toml
entity/src/: application.rs  application_group.rs  group.rs  lib.rs  mod.rs  prelude.rs  user.rs  user_group.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221101_212052_create_user.rs  m20230101_000001_create_table.rs  m20241230_153222_remove_unused.rs
src/: data.rs  error.rs  main.rs  middleware.rs  routes.rs
templates/: 404.html  admin.html  anon.html  app_card.html  app_cards.html  base.html  index.html  local_app_update.html  local_apps.html  protected.html
templates/local_apps/: create.html  icon_form.html  local_apps.html  read.html  update.html
test_data/: get-applications-response.json
