[package]
name = "synalpheus"
version = "0.5.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
dotenvy = "0.15"
futures = { version = "0.3", features = ["executor"] }
oauth2 = "4"
poem = { version = "3.1", features = [
    "session",
    "csrf",
    "multipart",
    "redis-session",
    "test",
    "static-files",
] }
redis = { version = "0.28", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["std"] }
tera = "1.20"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
